fixed overlapping issue #32399

--- a/ui/webui/resources/br_elements/br_toolbar/br_toolbar_selection_overlay_overrides.css
+++ b/ui/webui/resources/br_elements/br_toolbar/br_toolbar_selection_overlay_overrides.css
@@ -1,3 +1,7 @@
 :host {
   z-index: 3;
 }
+#overlap-content{
+  padding-left: var(--cr-toolbar-selection-overlay-padding, 24px);
+  padding-right: var(--cr-toolbar-selection-overlay-padding, 60px);
+}
